--- a/app/src/main/res/layout/create_contacts.xml
+++ b/app/src/main/res/layout/create_contacts.xml
@@ -14,61 +14,61 @@ tools:context=".CreateContactsActivity"
     >
     <TextView
         android:id="@+id/createContactLabel"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Provide the required fields below"
         android:layout_marginBottom="10dp"
-        android:textSize="14dp"
-        android:layout_weight="1"
+        android:textSize="16dp"
         android:layout_marginTop="5dp"
-
         android:textColor="@color/black"
         android:textStyle="normal">
     </TextView>
 
     <EditText
         android:id="@+id/editTextName"
+        android:textSize="14dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
         android:hint="Name" />
 
     <EditText
         android:id="@+id/editTextPhone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textSize="14dp"
         android:hint="Phone Number"
         android:inputType="phone" />
 
-    <Button
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:padding="16dp"
+        android:gravity="center"
+        >
+        <Button
         android:id="@+id/buttonCancelAddContact"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Cancel"
-        android:layout_marginRight="10dp"
+            android:layout_marginRight="10dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="16dp"
-        android:backgroundTint ="#F44336"
-        android:onClick="onCancelContactClicked"
+            android:backgroundTint ="#F44336"
+            android:onClick="onCancelContactClicked"
         />
 
-<!--    <LinearLayout-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent"-->
-<!--        android:orientation="horizontal"-->
-<!--        android:padding="16dp"-->
-<!--        >-->
-<!--       -->
-
-<!--    <Button-->
-<!--        android:id="@+id/buttonAddContact"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginLeft="10dp"-->
-<!--        android:text="Add Contact"-->
-<!--        android:layout_gravity="center_horizontal"-->
-<!--        android:layout_marginTop="16dp"-->
-<!--        android:onClick="onAddContactClicked" />-->
-<!--    </LinearLayout>-->
+    <Button
+        android:id="@+id/buttonAddContact"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:text="Save"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="16dp"
+        android:onClick="onAddContactClicked" />
+    </LinearLayout>
 
 </LinearLayout>
 
